Primeiro esboço da página inicial.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <title>Portfólio</title>
 </head>
 <body>
-    <H1>Portfólio.</H1>
+    <div class="container">
+        <div class="split left">
+          <h1>Afonso Monteiro</h1>
+            <h2>Especializado em Cibersegurança.</h2>
+          <a href="afonso.html" class="buttonl">Saber Mais</a>
+        </div>
+        <div class="split right">
+          <h1>Bruno Evangelista</h1>
+          <h2>Especializado em Marketing Digital.</h2>
+          <a href="bruno.html" class="buttonr">Saber Mais</a>
+        </div>
+      </div>
 </body>
 </html>
