Adição de imagem para teste.

--- a/bruno.html
+++ b/bruno.html
@@ -9,6 +9,7 @@
     <title>Portfólio</title>
 </head>
 <body>
-    <h1>Portfólio</h1>
+    <h1>Portfólio de Bruno Evangelista</h1>
+    <img width="100px" src="img/pessoa.jpg" alt="Imagem não encontrada">
 </body>
 </html>
