Adição de parte bruno

--- a/bruno.html
+++ b/bruno.html
@@ -5,11 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel="icon" href="img/favicon.png" type="image/png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="bruno.css">
     <title>Portfólio</title>
 </head>
-<body>
-    <h1>Portfólio de Bruno Evangelista</h1>
-    <img width="100px" src="img/pessoa.jpg" alt="Imagem não encontrada">
-</body>
-</html>
