Hambúrguer adicionado, responsividade melhorada, mudanças mínimas.

--- a/afonso.html
+++ b/afonso.html
@@ -72,14 +72,6 @@
         <p>Detalhe suas informações de contato aqui.</p>
     </section>
 
-    <script>
-        const hamburger = document.querySelector('.hamburger');
-        const navLinksMobile = document.querySelector('.nav-links-mobile');
-
-        hamburger.addEventListener('click', () => {
-            hamburger.classList.toggle('active');
-            navLinksMobile.classList.toggle('active');
-        });
-    </script>
+    <script src="scriptafonso.js"></script>
 </body>
 </html>
