--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <div class="split left">
             <h1>Afonso Monteiro</h1>
             <p>Especializado em Cibersegurança.</p>
-            <a href="#" class="buttonl">Saiba Mais</a>
+            <a href="afonso.html" class="buttonl">Saiba Mais</a>
         </div>
         <div class="split right">
             <h1>Bruno Evangelista</h1>
             <p>Especializado em Marketing.</p>
-            <a href="#" class="buttonr">Saiba Mais</a>
+            <a href="bruno.html" class="buttonr">Saiba Mais</a>
         </div>
     </div>
 </body>
