--- a/afonso.html
+++ b/afonso.html
@@ -51,22 +51,39 @@
 
     <section id="skills" class="section section-right">
         <h2>Skills</h2>
-        <p>Detalhe suas habilidades aqui.</p>
+        <p>Web Hacking</p>
+        <p>Vulnerabily Exploiting</p>
+        <p>Cryptography</p>
+        <p>Networking</p>
+        <p>Web Development</p>
+        <p>Operating Systems</p>
+        <p>Open-Source Intelligence</p>
+        <p>Privilege Escalation.</p>
     </section>
 
     <section id="education" class="section section-left">
         <h2>Education</h2>
-        <p>Detalhe sua educação aqui.</p>
+        <p>Escola Secundária Dr. Ginestal Machado - Técnico de Informática - Sistemas</p>
+        <p>Escola Superior de Gestão e Tecnologia - Tecnologias Web e Dispositivos Móveis (Present)</p>
+        <p>Cisco Networking Academy - Introduction to Cybersecurity</p>
+        <p>Cisco Networking Academy - Junior Cybersecurity Analyst</p>
+        <p>Cisco Networking Academy - Ethical Hacker</p>
+        <p>TryHackMe - Jr Penetration Tester</p>
+        <p>TryHackMe - Web Application Pentesting</p>
+        <p>TryHackMe - Red Teaming</p>
     </section>
 
     <section id="experience" class="section section-right">
         <h2>Experience</h2>
-        <p>Detalhe sua experiência aqui.</p>
+        <p>Internship at Worten.</p>
+        <p>Internship at GTA Solution.</p>
     </section>
 
     <section id="contact" class="section section-left">
         <h2>Contact</h2>
-        <p>Detalhe suas informações de contato aqui.</p>
+        <p>afonso@email.com</p>
+        <p>+351 912345678</p>
+        <p>Rua do Rui Desconfiado Nrº 5 4º Dto.</p>
     </section>
 
     <script src="scriptafonso.js"></script>
