--- a/bruno.html
+++ b/bruno.html
@@ -17,7 +17,12 @@
             <a href="#education">Education</a>
             <a href="#experience">Experience</a>
             <a href="#contact">Contact</a>
-        </div>
+    </div>
+
+    <div class="hamburger" id="hamburger">
+        <i class="fas fa-bars"></i>
+    </div>
+
     </nav>
 
     <section class="hero">
@@ -67,5 +72,7 @@
         <p>912345469</p>
         <p>Rua de casa nº123</p>
     </section>
+
+    <script src="scriptbruno.js"></script>
 </body>
 </html>
